--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
+        "gulp": "^5.0.0",
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.56.1",
-        "vite": "^5.4.3"
+        "vite": "^5.4.3",
+        "webpack": "^5.94.0",
+        "webpack-cli": "^5.1.4"
     }
 }
